update menu-items and implement router and withRouter

--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -5,8 +5,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  // border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
+
+  &:hover {
+    cursor: pointer;
+
+    & .bg-img {
+      transform: scale(1.2);
+      transition: transform 5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    & .content {
+      opacity: 0.8;
+    }
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -21,7 +34,7 @@
     height: 100%;
     background-position: center;
     background-size: cover;
-
+    transition: 1s;
     .overlay {
       height: 100%;
       width: 100%;
@@ -72,9 +85,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    // border: 1px solid black;
     background-color: white;
     position: absolute;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 25px 35px,
+      rgba(0, 0, 0, 0.17) 0px 4px 7px;
 
     .title {
       font-weight: bold;
