new header componenet created

--- a/src/components/shop-items/shop-items.styles.scss
+++ b/src/components/shop-items/shop-items.styles.scss
@@ -1,7 +1,17 @@
-.items {
-  margin: 100px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  row-gap: 150px;
-  justify-items: center;
+.shop-items {
+  margin: 50px auto;
+
+  h1 {
+    font-size: 40px;
+    color: white;
+    text-align: center;
+    margin: 50px;
+  }
+
+  .items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 150px;
+    justify-items: center;
+  }
 }
