integrated firebase into app, implemented sign in option with google auth

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -25,6 +25,11 @@
       padding: 10px 15px;
       text-decoration: none;
       color: white;
+      transition: 200ms;
+      cursor: pointer;
+      &:hover {
+        border-bottom: 2px solid #1c76c0;
+      }
     }
   }
 }
