--- a/src/components/login/login.styles.scss
+++ b/src/components/login/login.styles.scss
@@ -1,8 +1,18 @@
 .login {
   color: white;
-  width: 30vw;
+  width: 380px;
+  display: flex;
+  flex-direction: column;
+
+  .buttons {
+    padding-top: 20px;
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+  }
 
   h2 {
+    margin: 10px 0px;
     font-weight: 600;
   }
 
