--- a/src/components/register/register.styles.scss
+++ b/src/components/register/register.styles.scss
@@ -1,15 +1,8 @@
-.login {
+.register {
   color: white;
   width: 380px;
   display: flex;
   flex-direction: column;
-
-  .buttons {
-    padding-top: 20px;
-    width: 75%;
-    display: flex;
-    justify-content: space-between;
-  }
 
   .title {
     margin: 10px 0px;
