--- a/src/pages/register-and-login/register-and-login.styles.scss
+++ b/src/pages/register-and-login/register-and-login.styles.scss
@@ -1,3 +1,7 @@
 .register-and-login-page {
+  margin: 0 auto;
   margin-top: 100px;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
 }
