updated shop data and created cart utils to group items in cart reducer

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -12,6 +12,8 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 
   &:hover {
     background-color: black;
@@ -24,6 +26,16 @@
 
     &:hover {
       background-color: #004a86;
+    }
+  }
+
+  &.inverted {
+    background-color: black;
+    color: white;
+
+    &:hover {
+      background-color: white;
+      color: black;
     }
   }
 }
