added checkout page, checkout item component and updated cart to use selectors from reselect

--- a/src/components/cart-dropdown/cart-dropdown.styels.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styels.scss
@@ -11,6 +11,12 @@
   right: 40px;
   z-index: 5;
 
+  .empty-message {
+    font-size: 18px;
+    color: white;
+    margin: 100px auto;
+  }
+
   .cart-items {
     height: 280px;
     display: flex;
