--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -1,7 +1,5 @@
-.shop-items {
-  margin: 100px auto;
-
-  h1 {
+.collection-page {
+  h2 {
     font-size: 40px;
     color: white;
     text-align: center;
