--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -30,4 +30,10 @@
     margin-left: auto;
     font-size: 25px;
   }
+
+  .test-warning {
+    text-align: center;
+    margin: 30px;
+    font-size: 25px;
+  }
 }
